--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "nodemon": "^2.0.2",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "pg": "^8.0.2"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
